--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "vue-formulate",
-  "version": "0.13.0",
-  "description": "The easiest way to build forms in Vue with validation and vuex support.",
-  "main": "dist/index.js",
+  "version": "2.0.0-alpha.0",
+  "description": "The easiest way to build forms in Vue.",
+  "main": "dist/formulate.umd.js",
+  "module": "dist/formulate.esm.js",
+  "unpkg": "dist/formulate.min.js",
+  "browser": {
+    "./sfc": "src/Formulate.js"
+  },
   "scripts": {
-    "dev": "webpack --hide-modules --watch",
-    "build": "NODE_ENV=production && webpack -p --hide-modules",
-    "test": "ava",
-    "watch": "ava --watch"
+    "build": "npm run build:umd & npm run build:es & npm run build:unpkg & npm run build:css",
+    "build:css": "node-sass themes/snow/snow.scss dist/snow.css && postcss --use autoprefixer -b '> 2%' < dist/snow.css | postcss --use cssnano > dist/snow.min.css",
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/formulate.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/formulate.esm.js",
+    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/formulate.min.js",
+    "test": "NODE_ENV=test jest --config test/jest.conf.js",
+    "test:watch": "NODE_ENV=test jest --config test/jest.conf.js --watch"
   },
   "repository": {
     "type": "git",
@@ -26,40 +34,42 @@
   "bugs": {
     "url": "https://github.com/wearebraid/vue-formulate/issues"
   },
-  "homepage": "https://github.com/wearebraid/vue-formulate#readme",
+  "homepage": "https://www.vueformulate.com",
   "devDependencies": {
-    "ava": "^0.25.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.2.0",
-    "vue-loader": "^13.7.0",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0"
-  },
-  "ava": {
-    "require": [
-      "babel-register",
-      "babel-polyfill"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
+    "@vue/component-compiler-utils": "^3.0.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "autoprefixer": "^9.6.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.9.0",
+    "cssnano": "^4.1.10",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.9.0",
+    "jest-vue-preprocessor": "^1.5.0",
+    "node-sass": "^4.12.0",
+    "postcss": "^7.0.18",
+    "postcss-cli": "^6.1.3",
+    "rollup": "^1.22.0",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-vue": "^5.0.1",
+    "vue": "^2.6.10",
+    "vue-jest": "^3.0.5",
+    "vue-template-compiler": "^2.6.10",
+    "vue-template-es2015-compiler": "^1.9.1",
+    "watch": "^1.0.2"
   },
   "dependencies": {
-    "clone-deep": "^3.0.1",
-    "shortid": "^2.2.8"
+    "is-plain-object": "^3.0.0",
+    "nanoid": "^2.1.1"
   }
 }
