--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/formulate.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/formulate.min.js",
     "test": "NODE_ENV=test jest --config test/jest.conf.js",
-    "test:watch": "NODE_ENV=test jest --config test/jest.conf.js --watch"
+    "test:watch": "NODE_ENV=test jest --config test/jest.conf.js --watch",
+    "test:coverage": "NODE_ENV=test jest --config test/jest.conf.js --coverage"
   },
   "repository": {
     "type": "git",
@@ -36,12 +37,12 @@
   },
   "homepage": "https://www.vueformulate.com",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
     "@vue/component-compiler-utils": "^3.0.0",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "autoprefixer": "^9.6.1",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "autoprefixer": "^9.7.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
@@ -53,15 +54,17 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.3",
+    "flush-promises": "^1.0.2",
     "jest": "^24.9.0",
-    "jest-vue-preprocessor": "^1.5.0",
-    "node-sass": "^4.12.0",
-    "postcss": "^7.0.18",
+    "jest-vue-preprocessor": "^1.7.0",
+    "node-sass": "^4.13.0",
+    "postcss": "^7.0.21",
     "postcss-cli": "^6.1.3",
-    "rollup": "^1.22.0",
+    "rollup": "^1.26.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-vue": "^5.0.1",
+    "rollup-plugin-vue": "^5.1.2",
+    "typescript": "^3.6.4",
     "vue": "^2.6.10",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.10",
@@ -70,6 +73,6 @@
   },
   "dependencies": {
     "is-plain-object": "^3.0.0",
-    "nanoid": "^2.1.1"
+    "nanoid": "^2.1.6"
   }
 }
