--- a/package.json
+++ b/package.json
@@ -63,10 +63,11 @@
     "rollup": "^1.26.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-vue": "^5.1.2",
+    "rollup-plugin-vue": "^5.1.1",
     "typescript": "^3.6.4",
     "vue": "^2.6.10",
     "vue-jest": "^3.0.5",
+    "vue-runtime-helpers": "^1.1.2",
     "vue-template-compiler": "^2.6.10",
     "vue-template-es2015-compiler": "^1.9.1",
     "watch": "^1.0.2"
