--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/formulate.umd.js",
   "module": "dist/formulate.esm.js",
   "unpkg": "dist/formulate.min.js",
+  "engines": {
+    "node": ">=11"
+  },
   "browser": {
     "./sfc": "src/Formulate.js"
   },
