--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-formulate",
+  "name": "@braid/vue-formulate-next",
   "version": "2.0.0-alpha.0",
   "description": "The easiest way to build forms in Vue.",
   "main": "dist/formulate.umd.js",
