--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/formulate.umd.js",
   "module": "dist/formulate.esm.js",
   "unpkg": "dist/formulate.min.js",
+  "private": true,
   "engines": {
     "node": ">=11"
   },
