--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@braid/vue-formulate-next",
+  "name": "@braid/vue-formulate",
   "version": "2.0.0-alpha.1",
   "description": "The easiest way to build forms in Vue.",
   "main": "dist/formulate.umd.js",
