--- a/package.json
+++ b/package.json
@@ -43,44 +43,45 @@
   },
   "homepage": "https://www.vueformulate.com",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@vue/component-compiler-utils": "^3.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "autoprefixer": "^9.7.0",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@vue/component-compiler-utils": "^3.1.1",
+    "@vue/test-utils": "^1.0.0-beta.31",
+    "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.9.0",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.3",
     "flush-promises": "^1.0.2",
     "jest": "^24.9.0",
-    "jest-vue-preprocessor": "^1.7.0",
-    "node-sass": "^4.13.0",
-    "postcss": "^7.0.21",
+    "jest-vue-preprocessor": "^1.7.1",
+    "node-sass": "^4.13.1",
+    "postcss": "^7.0.27",
     "postcss-cli": "^6.1.3",
-    "rollup": "^1.26.0",
+    "rollup": "^1.31.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-vue": "^5.1.1",
-    "typescript": "^3.6.4",
-    "vue": "^2.6.10",
+    "rollup-plugin-vue": "^5.1.6",
+    "typescript": "^3.8.2",
+    "vue": "^2.6.11",
     "vue-jest": "^3.0.5",
     "vue-runtime-helpers": "^1.1.2",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.11",
     "vue-template-es2015-compiler": "^1.9.1",
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "clone-deep": "^4.0.1",
     "is-plain-object": "^3.0.0",
     "is-url": "^1.2.4",
-    "nanoid": "^2.1.6"
+    "nanoid": "^2.1.11"
   }
 }
