--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:css": "node-sass themes/snow/snow.scss dist/snow.css && postcss --use autoprefixer -b '> 2%' < dist/snow.css | postcss --no-map --use cssnano > dist/snow.min.css",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/formulate.umd.js",
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/formulate.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/formulate.min.js",
+    "build:unpkg": "rollup --config build/rollup.iife.config.js --format iife --file dist/formulate.min.js",
     "test": "NODE_ENV=test jest --config test/jest.conf.js",
     "test:watch": "NODE_ENV=test jest --config test/jest.conf.js --watch",
     "test:coverage": "NODE_ENV=test jest --config test/jest.conf.js --coverage"
@@ -46,6 +46,7 @@
     "@babel/core": "^7.8.4",
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@vue/component-compiler-utils": "^3.1.1",
     "@vue/test-utils": "^1.0.0-beta.31",
     "autoprefixer": "^9.7.4",
@@ -67,8 +68,11 @@
     "postcss": "^7.0.27",
     "postcss-cli": "^6.1.3",
     "rollup": "^1.31.1",
+    "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-internal": "^1.0.4",
+    "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-vue": "^5.1.6",
     "typescript": "^3.8.2",
     "vue": "^2.6.11",
@@ -79,10 +83,8 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
-    "clone-deep": "^4.0.1",
     "is-plain-object": "^3.0.0",
     "is-url": "^1.2.4",
-    "nanoid": "^2.1.11",
-    "rollup-plugin-terser": "^5.2.0"
+    "nanoid": "^2.1.11"
   }
 }
