--- a/package.json
+++ b/package.json
@@ -48,11 +48,8 @@
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "@vue/cli-plugin-babel": "^4.5.6",
-    "@vue/cli-plugin-eslint": "^4.5.6",
-    "@vue/cli-service": "^4.5.6",
-    "@vue/component-compiler-utils": "^3.2.0",
-    "@vue/test-utils": "^1.1.0",
+    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/test-utils": "^2.0.0-beta.7",
     "autoprefixer": "^9.8.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -66,8 +63,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.3",
     "flush-promises": "^1.0.2",
-    "jest": "^25.5.4",
-    "jest-vue-preprocessor": "^1.7.1",
+    "jest": "^26.6.0",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.34",
     "postcss-cli": "^7.1.2",
@@ -79,11 +75,8 @@
     "rollup-plugin-vue": "^5.1.9",
     "sass-loader": "^8.0.2",
     "typescript": "^3.9.7",
-    "vue": "^2.6.12",
-    "vue-jest": "^3.0.7",
-    "vue-runtime-helpers": "^1.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "vue-template-es2015-compiler": "^1.9.1",
+    "vue": "^3.0.2",
+    "vue-jest": "^5.0.0-alpha.5",
     "watch": "^1.0.2"
   },
   "dependencies": {
