--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "./sfc": "src/Formulate.js"
   },
   "scripts": {
-    "build": "npm run build:esm & npm run build:umd & npm run build:iife & npm run build:css & wait & npm run build:nuxt & wait && echo \"Build complete:\nesm: $(gzip -c dist/formulate.esm.js | wc -c)b gzip\numd: $(gzip -c dist/formulate.umd.js | wc -c)b gzip\nmin: $(gzip -c dist/formulate.min.js | wc -c)b gzip\"",
+    "build": "npm run build:esm & npm run build:umd & npm run build:iife & npm run build:css & wait && echo \"Build complete:\nesm: $(gzip -c dist/formulate.esm.js | wc -c)b gzip\numd: $(gzip -c dist/formulate.umd.js | wc -c)b gzip\nmin: $(gzip -c dist/formulate.min.js | wc -c)b gzip\"",
     "build:esm": "rollup --config build/rollup.config.js --format es --file dist/formulate.esm.js",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/formulate.umd.js",
     "build:iife": "rollup --config build/rollup.iife.config.js --format iife --file dist/formulate.min.js",
     "build:css": "node-sass themes/snow/snow.scss dist/snow.css && postcss --use autoprefixer -b '> 2%' < dist/snow.css | postcss --no-map --use cssnano > dist/snow.min.css",
-    "build:nuxt": "cp -r ./nuxt ./dist && uglifyjs --compress --mangle -o ./dist/nuxt/index.js -- ./nuxt/index.js",
     "test": "NODE_ENV=test jest --config test/jest.conf.js --coverage",
     "test:watch": "NODE_ENV=test jest --config test/jest.conf.js --watch",
     "test:coverage": "NODE_ENV=test jest --config test/jest.conf.js --coverage",
@@ -80,7 +79,6 @@
     "rollup-plugin-vue": "^5.1.9",
     "sass-loader": "^8.0.2",
     "typescript": "^3.9.7",
-    "uglify-es": "^3.3.9",
     "vue": "^2.6.12",
     "vue-jest": "^3.0.7",
     "vue-runtime-helpers": "^1.1.2",
